--- a/frontend/app/app.proto.component.html
+++ b/frontend/app/app.proto.component.html
@@ -1,6 +1,6 @@
 <div class="container">
 <h1>{{title}}</h1>
-<h2>DOC proto</h2>
+<h2>PROTO NO.1</h2>
     <br>
 <ul class="proto">
     <li *ngFor="let content of contents" (click)="onSelect(content)">
